# HamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
HamEngine/: CMakeLists.txt
HamEngine/assets/: default_config.ini
HamEngine/assets/shaders/: default.frag  flat.frag  funk.frag  normals.geom  object-picker.frag  outline.frag  outline.vert
HamEngine/include/: Ham.h
HamEngine/include/Ham/: Application.h  Assert.h  Base.h  EntryPoint.h  Layer.h  LayerStack.h  Log.h  PlatformDetection.h  Window.h
HamEngine/include/Ham/Core/: Application.h  Assert.h  Base.h  EntryPoint.h  FileSystem.h  Layer.h  LayerStack.h  Log.h  Macros.h  Math.h  PlatformDetection.h  Window.h
HamEngine/include/Ham/Debug/: Profiler.h
HamEngine/include/Ham/Editor/: EditorLayer.h
HamEngine/include/Ham/Events/: Event.h  EventBase.h
HamEngine/include/Ham/ImGui/: ImGuiImpl.h
HamEngine/include/Ham/Input/: Input.h  KeyCodes.h
HamEngine/include/Ham/Parser/: STLParser.h
HamEngine/include/Ham/Renderer/: Buffer.h  FrameBuffer.h  Shader.h  ShaderLibrary.h  VertexBuffer.h
HamEngine/include/Ham/Scene/: Component.h  Entity.h  Scene.h  Systems.h
HamEngine/include/Ham/Script/: CameraController.h  Oscillate.h
HamEngine/include/Ham/Util/: File.h  GLFWExtra.h  GlmExtra.h  ImGuiExtra.h  Random.h  TimeStep.h  Timer.h  UUID.h  Watcher.h
HamEngine/lib/: imgui.ini
HamEngine/lib/ImGuizmo/: CMakeLists.txt
HamEngine/lib/Mathter/: CMakeLists.txt
HamEngine/lib/glad/: CMakeLists.txt
HamEngine/lib/glad2/: CMakeLists.txt
HamEngine/lib/glad2/include/glad/: gl.h  vulkan.h
HamEngine/lib/glad2/include/vk_video/: vulkan_video_codec_h264std_encode.h  vulkan_video_codec_h265std_encode.h
HamEngine/lib/glad2/src/: vulkan.c
HamEngine/lib/imgui/: CMakeLists.txt
HamEngine/lib/optick/: CMakeLists.txt
HamEngine/lib/simplefilewatcher/: CMakeLists.txt
HamEngine/lib/whereami/: CMakeLists.txt  config.ini
HamEngine/src/: Application.cpp  Component.cpp  Entity.cpp  Event.cpp  FrameBuffer.cpp  GLFWExtra.cpp  ImGuiImpl.cpp  Input.cpp  LayerStack.cpp  Log.cpp  Random.cpp  Scene.cpp  Shader.cpp  ShaderLibrary.cpp  Systems.cpp  UUID.cpp  VertexBuffer.cpp  Watcher.cpp  Window.cpp
HamEngine/src/Editor/: EditorLayer.cpp
HamEngine/src/Script/: CameraController.cpp  Oscillate.cpp
HamGame/: CMakeLists.txt
HamGame/assets/models/: InteriorTest.mtl  monkey-ascii.stl
HamGame/assets/shaders/: basic.vert  cube.frag  cube.vert  default.frag  default.geom  default.vert  funk.frag  normals.frag  object-picker.frag
HamGame/src/: HamApp.cpp  HamLayer.cpp  HamLayer.h
modules/: Utils.cmake
